--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net461" />
+  <package id="websocket-sharp-danielsonjh" version="0.1.1" targetFramework="net461" />
 </packages>
